--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,10 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+  <view class="search_header">
+    <input class="search" placeholder="搜索账单"></input>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+  <view class="gird_icon"></view>
+  <view class="tab"></view>
+  <view class="list"></view>
+  <view class="bottom_nav"></view>
 </view>
